--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <div class="tweet__content">
               Starc does it again..! Here's the video..
-              <video src="images/video_2023-07-10_15-01-14.mp4" height="400" width="600">Watch Video</video>
+              <video src="images/video_2023-07-10_15-01-14.mp4" height="400" width="600" autoplay muted>Watch Video</video>
             </div>
           </div>
         </div>
